# SeeFood

./: README.md  environment.yml  requirements.txt
baseline_pretrained/: .gitignore  README.md  notebook.ipynb  pyproject.toml
common/: data.py  metrics.py  trainer.py
part2_finetune_resnet50/: analyze.py  eda.py  eval.py  run_colab.ipynb  train.py
part2_finetune_resnet50/configs/: full_finetune.yaml
part2_finetune_resnet50/results/: metrics.json  summary.md
part2_finetune_resnet50/results/v2_with_aug/: metrics.json
part2_finetune_resnet50/results/v4_hf_no_aug/: metrics.json
zack_code/: EDA.ipynb  README.md  extract_embeddings.py  job.slurm  job_extract.slurm  vit_train.py  vit_train_full.py
