[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "wandb>=0.26.0",
    "google-genai>=1.41.0",
    "google-generativeai>=0.8.5",
]
